Fixed Spacing

--- a/src/assets/master.scss
+++ b/src/assets/master.scss
@@ -22,8 +22,7 @@ body {
 
     @media (min-width: 501px) {
         h1 {
-            font-size: 4.6vw;
-            letter-spacing: -.15vw;
+            font-size: 4.6vw; 
             line-height: 1.12;
         }
     }
@@ -31,8 +30,7 @@ body {
 
     @media (max-width: 500px) {
         h1 {
-            font-size: 12vw;
-            letter-spacing: -.5vw;
+            font-size: 12vw; 
             line-height: 1.12;
         }
     }
@@ -42,8 +40,7 @@ body {
 
     @media (min-width: 501px) {
         p {
-            font-size: 1.75vw;
-            letter-spacing: -.08vw;
+            font-size: 1.75vw; 
             line-height: 1.45;
         }
     }
@@ -53,8 +50,7 @@ body {
         width: 82vw;
 
         p {
-            font-size: 5vw;
-            letter-spacing: -.19vw;
+            font-size: 5vw; 
             line-height: 1.8;
             opacity: .6;
         }
@@ -71,8 +67,7 @@ body {
 
     @media (max-width: 500px) {
         p {
-            font-size: 6.5vw;
-            letter-spacing: -.18vw;
+            font-size: 6.5vw; 
             line-height: 1.4;
         }
     }
@@ -123,13 +118,11 @@ body {
     line-height: 1.45;
 
     @media (min-width: 501px) {
-        font-size: 1.4vw;
-        letter-spacing: -.04vw;
+        font-size: 1.4vw; 
     }
 
     @media (max-width: 500px) {
-        font-size: 7vw;
-        letter-spacing: -.1vw;
+        font-size: 7vw; 
         padding: 0 0 8.5vw;
         margin: 0 0 8.5vw;
         position: relative;
